# dandelion-python

./: .gitignore  Dockerfile  flake.nix  pyproject.toml
.github/workflows/: release.yml
deploy/chart/: Chart.yaml  values.yaml
deploy/chart/charts/: fluent-bit-0.48.2.tgz
deploy/chart/templates/: _helpers.tpl  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
src/dandelion_python/: __init__.py  logger.py
